--- a/tag-basics/index.html
+++ b/tag-basics/index.html
@@ -9,7 +9,6 @@
 <body>
     <h1>Загрязнение окружающей среды: экологические проблемы природы.</h1>
     <P align="justify">	С МЛАДШИХ КЛАССОВ НАС УЧАТ, ЧТО ЧЕЛОВЕК И ПРИРОДА ЕДИНЫ, ЧТО НЕЛЬЗЯ ОТДЕЛИТЬ ОДНО ОТ ДРУГОГО. МЫ ПОЗНАЕМ РАЗВИТИЕ НАШЕЙ ПЛАНЕТЫ, ОСОБЕННОСТИ ЕЕ СТРОЕНИЯ И УСТРОЙСТВА. ЭТИ СФЕРЫ ВЛИЯЮТ НА НАШЕ БЛАГОПОЛУЧИЕ: АТМОСФЕРА, ПОЧВА, ВОДА ЗЕМЛИ — ЭТО, ПОЖАЛУЙ, САМЫЕ ГЛАВНЫЕ СОСТАВЛЯЮЩИЕ НОРМАЛЬНОЙ ЖИЗНИ ЧЕЛОВЕКА. НО ПОЧЕМУ ТОГДА КАЖДЫЙ ГОД ЗАГРЯЗНЕНИЕ ОКРУЖАЮЩЕЙ СРЕДЫ ИДЕТ ВСЕ ДАЛЬШЕ И ВЫХОДИТ НА ВСЕ БОЛЬШИЕ МАСШТАБЫ? ДАВАЙТЕ РАССМОТРИМ ОСНОВНЫЕ ПРОБЛЕМЫ ОКРУЖАЮЩЕЙ СРЕДЫ.</P>
-    <hr>
     <P>Содержание:</P>
     <ul>
         <li>Виды и основные источники загрязнения окружающей среды</li>
@@ -19,7 +18,42 @@
         <li>Как сохранить природную чистоту и предотвратить загрязнение природы?</li>
     </ul>
     <p align="justify">Загрязнение окружающей среды, под которой понимаются также природная среда и биосфера — это повышенное содержание в ней физических, химических или биологических реагентов, не характерных для данной среды, занесенных извне, наличие которых приводит к негативным последствиям.</p>
-    
-
+    <div id = "img">
+        <img src = "tiger.jpg">
+       </div>
+       1
+       2
+       3
+       <div id = "img">
+        <img src = "tiger.jpg">
+       </div>
+    <table border="3">
+        <thead>
+            <tr>
+                <td>Ячейка 1</td>
+                <td>Ячейка 2</td>
+                <td>Ячейка 3</td>
+         </tr>
+        </thead>
+        <tbody>        
+        <tr>
+            <td>ячейка 4</td>
+            <td>ячейка 5</td>
+            <td>ячейка 6</td>
+        </tr>
+        <tr>
+            <td>ячейка 7</td>
+            <td>ячейка 8</td>
+            <td>ячейка 9</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>123</td>
+            <td>456</td>
+            <td>789</td>
+        </tr>
+    </tfoot>
+     </table>
 </body>
 </html>
