--- a/css-basics/index.html
+++ b/css-basics/index.html
@@ -10,7 +10,10 @@
 <body>
  <p><h1>Загрязнение окружающей среды: экологические проблемы природы.</h1>
 </p>
-    <P align="justify">	С МЛАДШИХ КЛАССОВ НАС УЧАТ, ЧТО ЧЕЛОВЕК И ПРИРОДА ЕДИНЫ, ЧТО НЕЛЬЗЯ ОТДЕЛИТЬ ОДНО ОТ ДРУГОГО. МЫ ПОЗНАЕМ РАЗВИТИЕ НАШЕЙ ПЛАНЕТЫ, ОСОБЕННОСТИ ЕЕ СТРОЕНИЯ И УСТРОЙСТВА. ЭТИ СФЕРЫ ВЛИЯЮТ НА НАШЕ БЛАГОПОЛУЧИЕ: АТМОСФЕРА, ПОЧВА, ВОДА ЗЕМЛИ — ЭТО, ПОЖАЛУЙ, САМЫЕ ГЛАВНЫЕ СОСТАВЛЯЮЩИЕ НОРМАЛЬНОЙ ЖИЗНИ ЧЕЛОВЕКА. НО ПОЧЕМУ ТОГДА КАЖДЫЙ ГОД ЗАГРЯЗНЕНИЕ ОКРУЖАЮЩЕЙ СРЕДЫ ИДЕТ ВСЕ ДАЛЬШЕ И ВЫХОДИТ НА ВСЕ БОЛЬШИЕ МАСШТАБЫ? ДАВАЙТЕ РАССМОТРИМ ОСНОВНЫЕ ПРОБЛЕМЫ ОКРУЖАЮЩЕЙ СРЕДЫ.</P>
+<div class=".vvedenie">
+<p>С младших классов нас учат, что человек и природа едины, что нельзя отделить одно от другого. Мы познаем развитие нашей планеты, особенности ее строения и устройства. Эти сферы влияют на наше благополучие: атмосфера, почва, вода Земли — это, пожалуй, самые главные составляющие нормальной жизни человека. Но почему тогда каждый год загрязнение окружающей среды идет все дальше и выходит на все большие масштабы? Давайте рассмотрим основные проблемы окружающей среды.
+    </p>
+</div>
     <P>Содержание:</P>
     <ul>
         <li><a href="#okrsr">Виды и основные источники загрязнения окружающей среды</a></li>
